Fix heading colors in tooltips in dark mode

--- a/packages/core/src/components/popover/_common.scss
+++ b/packages/core/src/components/popover/_common.scss
@@ -139,6 +139,10 @@ $dark-popover-background-color: $dark-gray4 !default;
 
   .#{$ns}-popover-content {
     background: $background-color;
+  }
+
+  .#{$ns}-popover-content,
+  .#{$ns}-heading {
     color: $text-color;
   }
 
