--- a/packages/popover2/src/_common.scss
+++ b/packages/popover2/src/_common.scss
@@ -56,6 +56,10 @@ $pt-dark-tooltip2-box-shadow: $pt-dark-popover-box-shadow !default;
 
   .#{$ns}-popover2-content {
     background: $background-color;
+  }
+
+  .#{$ns}-popover2-content,
+  .#{$ns}-heading {
     color: $text-color;
   }
 
